# memryze

./: .gitignore  Cargo.toml  Makefile  README.md
auth/: Cargo.toml
auth/src/: main.rs
desktop/: Cargo.toml  README.md  styles.css
desktop/public/: glue.js
desktop/src/: app.rs  auth.rs  commands.rs  main.rs  quiz.rs  submit.rs
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.toml
desktop/src-tauri/src/: lib.rs  main.rs
desktop/types/: Cargo.toml
desktop/types/src/: lib.rs
message/: Cargo.toml
message/src/: lib.rs
prot/: Cargo.toml
prot/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  protocol.rs
server/src/client/: client.rs
server/src/db/: init.rs  mod.rs
src/: lib.rs  main.rs  protocol.rs
src/client/: client.rs
src/db/: init.rs  mod.rs
