[package]
name = "memryze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "memryze"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client/client.rs"

[[bin]]
name = "db"
path = "src/db/init.rs"

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
postcard = "1.0.8"
serde = "1.0.204"
clap = { version = "4.5.9", features = ["derive"] }
tokio-postgres = "0.7.10"
anyhow = "1.0.86"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["default", "env-filter"] }
