[package]
name = "auth"
version = "0.1.0"
edition.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0.87"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
tokio-postgres = "0.7.10"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "default",
  "env-filter",
] }
