[package]
name = "memryze"
version = "0.0.0"
description = "Memryze Tauri Desktop"
authors = ["Amin Mir"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [ "config-toml" ] }

[dependencies]
anyhow = "1.0"
tauri = { version = "2.0.0-rc", features = [ "config-toml" ] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version="1", features = ["net", "rt", "sync"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
  "default",
  "env-filter",
] }
rand = "0.8.5"
argon2 = { version = "0.5", features = [ "std" ] }
iota_stronghold = "2.1.0"
zeroize = "1.8.1"
prot = { path = "../../prot" }
message = { path = "../../message" }
